# OELP

./: .gitignore  GATE_INTEGRATION_SUMMARY.md  README.md  pyproject.toml
2_app_data/structured_questions/: CAT_DILR.json  CAT_Quant.json  CAT_VARC.json
app/: main.py
app_data/generated_questions/CAT/: exam_20250920_002415.json
app_data/generated_questions/GATE/: gate_exam_CS_20251002_202241.json  gate_exam_CS_20251002_202436.json
app_data/structured_questions/: CAT_DILR.json  CAT_Quant.json  CAT_VARC.json
app_data/structured_questions/CAT/: CAT_DILR_all_years_combined.json  CAT_QA_all_years_combined.json  CAT_VARC_all_years_combined.json
app_data/structured_questions/GATE/: GATE_AE_GA_all_years_combined.json  GATE_AE_TECH_all_years_combined.json  GATE_AG_GA_all_years_combined.json  GATE_AR_GA_all_years_combined.json  GATE_AR_TECH_all_years_combined.json  GATE_BM_GA_all_years_combined.json  GATE_BM_TECH_all_years_combined.json  GATE_BT_GA_all_years_combined.json  GATE_CE_GA_all_years_combined.json  GATE_CH_GA_all_years_combined.json  GATE_CS_GA_all_years_combined.json  GATE_CS_TECH_all_years_combined.json  (+28 more)
data_pipeline/scripts/: build_vector_db.py  parse_pdfs.py  question_solver.py
fastapi_app/: config.py  crud.py  database.py  init_db.py  main.py  models.py  payments.py  rag_service.py  schema.py  security.py  seed_db.py
tools/: README.md  download_gate_pdfs.py  gate_integration_test.py  gate_urls_extractor.py  test_2024_downloads.py  test_2024_patterns.py  test_corrected_download.py  test_corrected_patterns.py  test_gate_download.py
(+1 files in other folders)
